--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -23,9 +23,9 @@ en:
       confirmation_instructions:
         subject: "Confirmation instructions"
       reset_password_instructions:
-        subject: "Reset password instructions"
+        subject: "%{environment_name}Reset password instructions"
       first_time_devise_reset_password_instructions:
-        subject: "Action required: RODA password reset"
+        subject: "%{environment_name}Action required: RODA password reset"
       unlock_instructions:
         subject: "Unlock instructions"
       email_changed:
