Use locale string for welcome email subject
We need the email subject to be more flexible than the Notify template
personalisations are allowing it to be: we want to conditionally display
some content, and we also want that optional content to vary depending
on environment name.

Notify templates do not allow empty personalisations, and optional
content cannot be personalised.

Co-authored-by: George <george@dxw.com>

--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -20,6 +20,8 @@ en:
       unconfirmed: "You have to confirm your email address before continuing."
       invalid_two_factor: "Invalid two-factor verification code."
     mailer:
+      welcome:
+        subject: "%{environment_name}Invitation to the BEIS RODA service"
       confirmation_instructions:
         subject: "Confirmation instructions"
       reset_password_instructions:
