Add extra info about activity to report CSVs
The extra information consists of the parent programme RODA ID and
title, and the project RODA ID and title where applicable.

Where not applicable (e.g. for a project, AKA level C), the columns are
still added, and their values are left blank.

The `includes` clause was added to optimise the query as per Bullet’s
demands.

--- a/config/locales/models/activity.en.yml
+++ b/config/locales/models/activity.en.yml
@@ -401,6 +401,10 @@ en:
     attributes:
       activity:
         roda_identifier: RODA identifier
+        parent_programme_identifier: Parent level B ID
+        parent_programme_title: Parent level B title
+        parent_project_identifier: Parent level C ID
+        parent_project_title: Parent level C title
         transparency_identifier: IATI identifier
         beis_identifier: Original BEIS tracker identifier
         level: Activity level
