--- a/config/locales/models/activity.en.yml
+++ b/config/locales/models/activity.en.yml
@@ -408,7 +408,7 @@ en:
         transparency_identifier: IATI identifier
         beis_identifier: Original BEIS tracker identifier
         level: Activity level
-        delivery_partner_identifier: Delivery partner identifier
+        delivery_partner_identifier: Partner organisation identifier
         recipient_region: Recipient region
         recipient_country: Recipient country
         intended_beneficiaries: Intended beneficiaries
