Replace "View details" link with link on Org name
This frees up some room in future for a link to "Upload activities".

I've also added a visually hidden span for screen readers here, although
I wonder if the text could be a bit more obvious?

--- a/config/locales/default.en.yml
+++ b/config/locales/default.en.yml
@@ -37,6 +37,8 @@ en:
     cell:
       default:
         no_actions_available: No actions available
+      organisations:
+        details: details
   activerecord:
     attributes:
       default:
