Use translation files for org table actions
We're using a mix in this file, but it makes sense to be consistent
here. Keeping translations in the locale files makes it easier for
people to only have to think about updating it in one place.

--- a/config/locales/default.en.yml
+++ b/config/locales/default.en.yml
@@ -39,6 +39,9 @@ en:
         no_actions_available: No actions available
       organisations:
         details: details
+        view_activities: View activities
+        view_exports: View exports
+        view_reports: View reports
   activerecord:
     attributes:
       default:
