--- a/config/locales/views/exports.en.yml
+++ b/config/locales/views/exports.en.yml
@@ -12,7 +12,7 @@ en:
   page_content:
     export:
       organisations:
-        title: Exports for delivery partner organisations
+        title: Exports for partner organisations
   table:
     export:
       organisation:
