Add placeholder Level B activity upload page
This adds a link in the partner organisations table to "Upload data",
taking users to the new Level B activity bulk upload path for the
selected organisation, which is based on the the existing report-based
activity bulk upload form

This form is not currently functional - the work in this branch will
later be built on to allow users to upload Level B activity upload data

Supporting the action is a new organisation policy query to check
whether the user is authorised to view the bulk upload form

The `form_with` method is used here, since the `form_for` method used
elsewhere in the codebase is soft deprecated

@see https://guides.rubyonrails.org/form_helpers.html#using-form-tag-and-form-for

Co-authored-by: George <george@dxw.com>
Co-authored-by: Ynda <ynda@dxw.com>

--- a/config/locales/default.en.yml
+++ b/config/locales/default.en.yml
@@ -39,6 +39,7 @@ en:
         no_actions_available: No actions available
       organisations:
         details: details
+        upload_data: Upload data
         view_activities: View activities
         view_exports: View exports
         view_reports: View reports
