--- a/config/locales/models/budget.en.yml
+++ b/config/locales/models/budget.en.yml
@@ -8,6 +8,11 @@ en:
         success: Budget successfully updated
       destroy:
         success: Budget successfully deleted
+      bulk_download:
+        button: Download CSV template
+        hint_html: "<p class='govuk-body'>This CSV contains all the columns that can be used to create or update budgets.</p><p class='govuk-body'>Edit it to add the values for the relevant budgets, then upload it through the form.</p>"
+      upload:
+        button: Upload and continue
   form:
     label:
       budget:
@@ -19,6 +24,7 @@ en:
         budget_type:
           direct: Direct
           other_official: Other official development assistance
+        csv_file: Upload CSV spreadsheet
     legend:
       budget:
         budget_type: Type
@@ -33,6 +39,7 @@ en:
         budget_type:
           direct: Budget allocated directly from the parent activity
           other_official: Budget allocated from an external organisation that is still considered ODA funding
+        csv_file: Upload a spreadsheet containing budget data in CSV format.
   table:
     header:
       budget:
@@ -52,6 +59,7 @@ en:
     budget:
       edit: Edit budget
       new: Create budget
+      upload_level_b: Bulk upload budget data for Level B activities
   breadcrumb:
     budget:
       edit: Edit budget
