Add budgets link to top nav
This adds a link to the Level B budgets bulk upload page to the top nav for BEIS
users. While this isn't an index page (there isn't one), I've added and used an
index page translation, as this is in alignment with what we want the top nav text
to be ("Budgets", not "Bulk upload budget data for Level B activities")

--- a/config/locales/models/budget.en.yml
+++ b/config/locales/models/budget.en.yml
@@ -65,6 +65,7 @@ en:
   page_title:
     budget:
       edit: Edit budget
+      index: Budgets
       new: Create budget
       upload_level_b: Bulk upload budget data for Level B activities
   breadcrumb:
